# passman

./: .gitignore  .travis.yml  Cargo.toml  README.md  message_protocol.md  password_file.md  run-tests.sh
src/: main.rs
src/cli/: main.rs
src/cli/argument/: mod.rs
src/cli/clipboard/: clipboard.rs
src/cli/pass/: mod.rs
src/clipboard/: clipboard.rs
src/daemon/: PasswordFile.rs  entry_value.rs  key_value.rs  main.rs  passman.service  passman_crypto.rs  password_file.rs  password_file_tests.rs
src/daemon/integration_test/: test.py
src/daemon/password_file/: mod.rs  tests.rs
src/daemon/password_file/test_password_files/: password_file.pass
src/daemon/test_messages/: add.msg
src/lib/: crypto.rs
src/lib/crypto/: lib.rs
src/pass/: mod.rs
tests/: test.py
