[package]
name = "passman"
version = "0.1.0"
authors = ["mindray87 <pa.toth87@gmail.com>", "jriegraf <julianriegraf@web.de>"]
edition = "2018"

[[bin]]
name = "passman-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "passman-cli"
path = "src/cli/main.rs"


[dependencies]
copypasta = "0.7.0"
clipboard = "0.5.0"
rust-crypto = "^0.2"
rand = "0.7.3"
rustc-serialize = "0.3.24"
regex = "1"