[package]
name = "passman"
version = "0.1.0"
authors = ["mindray87 <pa.toth87@gmail.com>", "jriegraf <julianriegraf@web.de>"]
edition = "2018"

[[bin]]
name = "passman-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "passman-cli"
path = "src/cli/main.rs"


[dependencies]
clipboard = "0.5.0"
aes = "0.4.0"
block-modes = "0.5.0"
gost-modes = "0.1.0"
hex-literal = "0.3.0"
rand = "0.7.3"
rustc-serialize = "0.3.24"
regex = "1"